added projects page

--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -68,7 +68,7 @@ const { title } = Astro.props
         <header>
             <!-- Header Art -->
             <PixelartPlantRect
-                client:visible
+                client:load
                 options={{
                     cellColor: '#66666606',
                     spawnLocation: 'top',
