--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,26 +23,6 @@ const recentArtWorks = procreateWorks.slice(0, 3)
         <div class="text">
             <h2>About</h2>
 
-            <!-- <h1 class="left"></h1>
-            <p>
-                On the web I go by <Link href="https://aziis98.com">@aziis98</Link>, I am a Mathematics student at
-                the University of Pisa. I have always been passionate about computer science (at all levels) and for
-                some years now I have been a <em>macchinista</em> of the PHC, among other things we manage the server
-                with the students' pages called <Link href="https://poisson.phc.dm.unipi.it">Poisson</Link>.
-            </p>
-            <p>
-                In this site I will mainly upload <Link href="/articles">articles</Link> on what I do or other random
-                things such as the <em>generative art</em> (procedural art to be precise in this times) stuff found in
-                the <Link href="/art">artistic</Link> section.
-            </p>
-            <p>
-                Socials:
-                <a href="https://github.com/aziis98/">GitHub</a>,
-                <a href="https://news.ycombinator.com/user?id=aziis98">HackerNews</a>,
-                <a href="https://lobste.rs/~aziis98">Lobsters</a>,
-                <a href="https://www.instagram.com/">Instagram</a>.
-            </p> -->
-
             <p>Hi! I'm Antonio De&nbsp;Lucreziis (on the web I go by <a href="https://aziis98.com">@aziis98</a>).</p>
             <p>
                 I am a <a href="https://www.dm.unipi.it/">Mathematics student at the University of Pisa</a>. I have
@@ -61,16 +41,26 @@ const recentArtWorks = procreateWorks.slice(0, 3)
         <div style="display: flex; align-items: center; gap: 1rem;">
             <strong>Socials:</strong>
 
-            <a style="display: grid;" href="https://github.com/aziis98" title="GitHub profile">
+            <a style="display: grid;" target="_blank" href="https://github.com/aziis98" title="GitHub profile">
                 <img src="https://github.com/favicon.ico" alt="GitHub" width="24" height="24" />
             </a>
-            <a style="display: grid;" href="https://news.ycombinator.com/user?id=aziis98" title="HackerNews profile">
+            <a
+                style="display: grid;"
+                target="_blank"
+                href="https://news.ycombinator.com/user?id=aziis98"
+                title="HackerNews profile"
+            >
                 <img src="https://news.ycombinator.com/favicon.ico" alt="HackerNews" width="24" height="24" />
             </a>
-            <a style="display: grid;" href="https://lobste.rs/~aziis98" title="Lobsters profile">
+            <a style="display: grid;" target="_blank" href="https://lobste.rs/~aziis98" title="Lobsters profile">
                 <img src="https://lobste.rs/favicon.ico" alt="Lobsters" width="24" height="24" />
             </a>
-            <a style="display: grid;" href="https://www.instagram.com/aziis98" title="Instagram profile">
+            <a
+                style="display: grid;"
+                target="_blank"
+                href="https://www.instagram.com/aziis98"
+                title="Instagram profile"
+            >
                 <img
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/250px-Instagram_icon.png"
                     alt="Instagram"
