--- a/src/main.css
+++ b/src/main.css
@@ -193,7 +193,7 @@
         }
 
         strike {
-            text-decoration: line-through;
+            text-decoration: line-through solid #333 2px;
         }
 
         img,
@@ -505,7 +505,7 @@
         position: sticky;
         top: -0.25rem;
 
-        width: 15rem;
+        width: 19rem;
 
         display: grid;
         grid-auto-flow: row;
@@ -588,10 +588,13 @@
     .blog-grid {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(21rem, auto));
+
         gap: 1rem;
 
         .blog-item {
             padding: 0.5rem;
+
+            min-height: 12rem;
 
             display: grid;
             grid-template-rows: auto 1fr;
@@ -654,8 +657,8 @@
 
     .art-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(380px, auto));
-        grid-auto-rows: 15rem;
+        grid-template-columns: repeat(auto-fill, minmax(21rem, auto));
+        grid-auto-rows: calc(21rem / 1.5);
         gap: var(--main-gap);
 
         img {
@@ -669,9 +672,11 @@
             height: 100%;
 
             box-shadow: var(--card-shadow);
+        }
 
-            &.interactive {
-                :hover {
+        &.interactive {
+            img {
+                &:hover {
                     max-width: 100%;
                     object-fit: contain;
                 }
@@ -686,6 +691,151 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+    }
+
+    .project-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(21rem, auto));
+        gap: var(--main-gap);
+
+        /* align-items: start; */
+
+        --github-border-color: hsl(208, 19%, 85%);
+
+        .project-item {
+            display: grid;
+            grid-template-rows: auto 1fr;
+
+            border-radius: 0.25rem;
+            padding: 0.75rem 0.5rem 0.5rem;
+            gap: 0.5rem;
+
+            background: linear-gradient(calc(180deg - 30deg), #fff, hsl(from var(--github-border-color) h 15% 95%));
+            color: #333;
+
+            min-height: 10rem;
+
+            /* box-shadow: var(--card-shadow); */
+
+            border: 1px solid var(--github-border-color);
+            box-shadow: 0 0 1rem #00000008;
+
+            > .name {
+                font-size: 15px;
+                font-family: var(--font-monospace);
+                font-weight: 500;
+                line-height: 1;
+
+                display: grid;
+                gap: 0.35rem;
+                grid-template-columns: auto 1fr;
+                align-items: center;
+
+                svg {
+                    width: 18px;
+                    height: 18px;
+
+                    overflow: visible;
+                }
+
+                a {
+                    display: grid;
+                    align-items: center;
+                }
+            }
+
+            > .description {
+                font-size: 15px;
+                color: #555;
+                line-height: 1.75;
+
+                padding-left: 0.25rem;
+                padding-right: 0.25rem;
+
+                padding-bottom: 0.75rem;
+            }
+
+            > .topics {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 0.25rem;
+
+                user-select: none;
+
+                .topic {
+                    display: grid;
+                    place-content: center;
+                    place-items: center;
+
+                    font-size: 14px;
+
+                    height: 1.25rem;
+
+                    background: hsl(from var(--accent) h s 95%);
+                    color: hsl(from var(--accent) h calc(s - 50) 60%);
+                    padding: 0 0.5rem;
+                    border-radius: 1rem;
+
+                    &:hover {
+                        background: hsl(from var(--accent) h s 90%);
+                        color: hsl(from var(--accent) h calc(s - 50) 50%);
+                    }
+                }
+            }
+
+            > .stats {
+                display: flex;
+                gap: 0.5rem;
+
+                font-size: 14px;
+
+                color: #555;
+
+                padding-right: 0.5rem;
+
+                > * {
+                    display: grid;
+                    grid-auto-flow: column;
+                    gap: 0.25rem;
+
+                    align-items: center;
+
+                    svg {
+                        width: 16px;
+                        height: 16px;
+                    }
+                }
+
+                .spacer {
+                    flex-grow: 1;
+                }
+
+                .stars {
+                    color: hsl(from var(--accent) 45 s 20%);
+
+                    svg {
+                        color: hsl(from var(--accent) 45 s 55%);
+                    }
+                }
+
+                .technologies {
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: 0.5rem;
+
+                    align-items: center;
+
+                    svg {
+                        font-size: 24px;
+                        overflow: visible;
+                    }
+                }
+            }
+        }
+
+        @media screen and (width <= 600px) {
+            grid-template-columns: repeat(auto-fill, minmax(100%, auto));
         }
     }
 }
