--- a/src/pages/art/index.astro
+++ b/src/pages/art/index.astro
@@ -6,7 +6,7 @@ import { Image } from 'astro:assets'
 const { procreate: procreateWorks, old: oldWorks } = await getArtCollections()
 ---
 
-<Base>
+<Base title={'Art'}>
     <h1 slot="header-title">Art</h1>
     <div class="content wide">
         <!-- <Image -->
