--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,7 @@ const posts = await getPosts()
 const postsByTags = await getPostsByTag()
 ---
 
-<Base>
+<Base title={'Blog'}>
     <h1 slot="header-title">Blog</h1>
     <div class="content wide">
         <h2>Posts</h2>
