--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -6,7 +6,7 @@ import { getProjectsData } from '@/projects'
 const { githubRepoDetails, phcGiteaRepoDetails } = await getProjectsData()
 ---
 
-<Base>
+<Base title={'Projects'}>
     <h1 slot="header-title">Projects</h1>
     <div class="content wide">
         <div class="text">
