--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -13,9 +13,11 @@ import { Icon } from 'astro-icon/components'
 
 type Props = {
     title?: string | string[]
+    description?: string
+    thumbnail?: string
 }
 
-const { title } = Astro.props
+const { title, description, thumbnail } = Astro.props
 ---
 
 <!doctype html>
@@ -23,6 +25,19 @@ const { title } = Astro.props
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <meta name="generator" content={Astro.generator} />
+
+        <meta property="og:title" content={['aziis98', title ?? []].flat().reverse().join(' - ')} />
+        <meta
+            property="og:description"
+            content={description ??
+                "I'm Antonio De Lucreziis, I study Maths in Pisa and I'm interested in computer science. There is also an art section with a gallery of most of my works"}
+        />
+        <meta property="og:image" content={thumbnail ?? '/icon.png'} />
+
+        <title>{['aziis98', title ?? []].flat().reverse().join(' | ')}</title>
+        <link rel="icon" type="image/png" sizes="192x192" href="/icon.png" />
 
         <script>
             // @ts-nocheck
@@ -62,8 +77,6 @@ const { title } = Astro.props
                 })
             })
         </script>
-
-        <title>{['aziis98', title ?? []].flat().reverse().join(' | ')}</title>
     </head>
     <body>
         <input type="checkbox" id="mobile-sidebar-menu" autocomplete="off" />
