--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -27,7 +27,7 @@ const { Content } = await render(post)
     <h1 slot="header-title">{post.data.title}</h1>
     <div class="content text">
         {
-            post.data.thumbnail && (
+            post.data.thumbnail && post.data.thumbnail_visible && (
                 <a href={post.data.thumbnail_url}>
                     <img
                         class="post-thumbnail"
