--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -122,6 +122,8 @@ const { title, description, thumbnail } = Astro.props
 
                 <a class="nav-item" href="/projects">Projects</a>
 
+                <a class="nav-item" href="/academia">Academia</a>
+
                 <div class="art-decoration">
                     <PixelartPlantRect
                         client:load
