--- a/src/main.css
+++ b/src/main.css
@@ -393,11 +393,11 @@
             &::after {
                 content: '';
                 position: absolute;
-                bottom: 0;
+                top: 100%;
                 left: 0;
                 right: 0;
                 height: 0.5rem;
-                background: linear-gradient(to top, #0003, transparent);
+                background: linear-gradient(to bottom, #0003, transparent);
             }
 
             > * > .pixelart-plant-art {
@@ -463,7 +463,7 @@
 
                 > .art-decoration {
                     justify-self: end;
-                    height: calc(round(25vh, 10px) + 5px);
+                    height: calc(round(20vh, 10px) + 5px);
                 }
             }
 
@@ -883,6 +883,16 @@
                 padding-right: 0.25rem;
 
                 padding-bottom: 0.75rem;
+
+                a {
+                    color: inherit;
+                    text-decoration: underline dotted #000;
+
+                    &:hover {
+                        color: hsl(from var(--accent) h s 50%);
+                        text-decoration: underline solid hsl(from var(--accent) h s 60%) 2px;
+                    }
+                }
             }
 
             > .topics {
@@ -970,6 +980,130 @@
 
         @media screen and (width <= 600px) {
             grid-template-columns: repeat(auto-fill, minmax(100%, auto));
+        }
+    }
+
+    .notebook-grid {
+        /* display: grid;
+
+        --notebook-size: 13rem;
+        grid-template-columns: repeat(auto-fit, minmax(auto, var(--notebook-size)));
+        grid-auto-rows: calc(var(--notebook-size) * 1.33);
+
+        gap: var(--main-gap); */
+
+        --notebook-size: 13rem;
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: end;
+
+        gap: var(--main-gap);
+
+        .notebook-item {
+            color: inherit;
+
+            padding: 0.5rem 1.25rem;
+
+            position: relative;
+
+            width: var(--notebook-size);
+            height: calc(var(--notebook-size) * 1.33);
+
+            line-height: 1.25;
+
+            color: oklch(from var(--notebook-color, gray) 20% c h);
+            background: #fff;
+
+            border-top-right-radius: 0.75rem;
+            border-bottom-right-radius: 0.75rem;
+            box-shadow:
+                0 0 1rem #0001,
+                0 0 0.25rem #0003;
+
+            z-index: 10;
+
+            display: grid;
+            place-content: start start;
+            grid-auto-flow: row;
+            gap: 0.75rem;
+
+            &.larger {
+                --notebook-size: 14rem;
+            }
+
+            &::before {
+                content: '';
+                position: absolute;
+
+                top: -1px;
+                left: 0;
+                right: 0.5rem;
+                bottom: -1px;
+
+                background: linear-gradient(
+                    calc(180deg - 30deg),
+                    oklch(from var(--notebook-color, gray) 70% calc(c + 0.03) h),
+                    oklch(from var(--notebook-color, gray) 60% calc(c + 0.03) h)
+                );
+                border: 2px solid oklch(from var(--notebook-color, gray) 60% c h);
+                border-left: none;
+
+                border-top-right-radius: 0.75rem;
+                border-bottom-right-radius: 0.75rem;
+
+                box-shadow:
+                    0 0 1rem #0001,
+                    0 0 0.25rem #0004;
+
+                z-index: -1;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: -1px;
+                bottom: -1px;
+                left: 0;
+                width: 0.5rem;
+
+                background: linear-gradient(
+                    calc(180deg - 10deg),
+                    oklch(from var(--notebook-color, gray) 30% c h),
+                    oklch(from var(--notebook-color, gray) 15% c h)
+                );
+                border: 1px solid oklch(from var(--notebook-color, gray) 20% c h);
+
+                z-index: -1;
+            }
+
+            &,
+            &::before,
+            &::after {
+                transition: all 128ms ease-out;
+            }
+
+            &:hover {
+                box-shadow:
+                    0 0 1.5rem #0003,
+                    0 0 0.25rem #0006;
+
+                &::before {
+                    right: 1rem;
+                }
+            }
+
+            > .title {
+                font-family: var(--font-title);
+                font-size: 22px;
+                font-weight: 500;
+                text-wrap: balance;
+            }
+
+            > .info {
+                font-size: 16px;
+            }
         }
     }
 
